--- a/Kaushal_NETFLIX_MOVIES_AND_TV_SHOWS_CLUSTERING.ipynb
+++ b/Kaushal_NETFLIX_MOVIES_AND_TV_SHOWS_CLUSTERING.ipynb
@@ -5,123 +5,6 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "vncDsAP0Gaoa",
-        "FJNUwmbgGyua",
-        "w6K7xa23Elo4",
-        "yQaldy8SH6Dl",
-        "O_i_v8NEhb9l",
-        "HhfV-JJviCcP",
-        "Y3lxredqlCYt",
-        "3RnN4peoiCZX",
-        "x71ZqKXriCWQ",
-        "7hBIi_osiCS2",
-        "JlHwYmJAmNHm",
-        "35m5QtbWiB9F",
-        "PoPl-ycgm1ru",
-        "H0kj-8xxnORC",
-        "nA9Y7ga8ng1Z",
-        "PBTbrJXOngz2",
-        "u3PMJOP6ngxN",
-        "dauF4eBmngu3",
-        "bKJF3rekwFvQ",
-        "MSa1f5Uengrz",
-        "GF8Ens_Soomf",
-        "0wOQAZs5pc--",
-        "K5QZ13OEpz2H",
-        "lQ7QKXXCp7Bj",
-        "448CDAPjqfQr",
-        "KSlN3yHqYklG",
-        "t6dVpIINYklI",
-        "ijmpgYnKYklI",
-        "-JiQyfWJYklI",
-        "EM7whBJCYoAo",
-        "fge-S5ZAYoAp",
-        "85gYPyotYoAp",
-        "RoGjAbkUYoAp",
-        "4Of9eVA-YrdM",
-        "iky9q4vBYrdO",
-        "F6T5p64dYrdO",
-        "y-Ehk30pYrdP",
-        "bamQiAODYuh1",
-        "QHF8YVU7Yuh3",
-        "GwzvFGzlYuh3",
-        "qYpmQ266Yuh3",
-        "OH-pJp9IphqM",
-        "bbFf2-_FphqN",
-        "_ouA3fa0phqN",
-        "Seke61FWphqN",
-        "PIIx-8_IphqN",
-        "t27r6nlMphqO",
-        "r2jJGEOYphqO",
-        "b0JNsNcRphqO",
-        "BZR9WyysphqO",
-        "jj7wYXLtphqO",
-        "eZrbJ2SmphqO",
-        "rFu4xreNphqO",
-        "YJ55k-q6phqO",
-        "gCFgpxoyphqP",
-        "OVtJsKN_phqQ",
-        "lssrdh5qphqQ",
-        "U2RJ9gkRphqQ",
-        "1M8mcRywphqQ",
-        "tgIPom80phqQ",
-        "x-EpHcCOp1ci",
-        "X_VqEhTip1ck",
-        "8zGJKyg5p1ck",
-        "n3dbpmDWp1ck",
-        "ylSl6qgtp1ck",
-        "ZWILFDl5p1ck",
-        "M7G43BXep1ck",
-        "Ag9LCva-p1cl",
-        "E6MkPsBcp1cl",
-        "2cELzS2fp1cl",
-        "3MPXvC8up1cl",
-        "NC_X3p0fY2L0",
-        "UV0SzAkaZNRQ",
-        "YPEH6qLeZNRQ",
-        "q29F0dvdveiT",
-        "EXh0U9oCveiU",
-        "22aHeOlLveiV",
-        "g-ATYxFrGrvw",
-        "Yfr_Vlr8HBkt",
-        "8yEUt7NnHlrM",
-        "tEA2Xm5dHt1r",
-        "I79__PHVH19G",
-        "Ou-I18pAyIpj",
-        "fF3858GYyt-u",
-        "4_0_7-oCpUZd",
-        "hwyV_J3ipUZe",
-        "3yB-zSqbpUZe",
-        "dEUvejAfpUZe",
-        "Fd15vwWVpUZf",
-        "bn_IUdTipZyH",
-        "49K5P_iCpZyH",
-        "Nff-vKELpZyI",
-        "kLW572S8pZyI",
-        "dWbDXHzopZyI",
-        "yiiVWRdJDDil",
-        "4qY1EAkEfxKe",
-        "PiV4Ypx8fxKe",
-        "TfvqoZmBfxKf",
-        "dJ2tPlVmpsJ0",
-        "JWYfwnehpsJ1",
-        "-jK_YjpMpsJ2",
-        "HAih1iBOpsJ2",
-        "zVGeBEFhpsJ2",
-        "bmKjuQ-FpsJ3",
-        "Fze-IPXLpx6K",
-        "7AN1z2sKpx6M",
-        "9PIHJqyupx6M",
-        "_-qAgymDpx6N",
-        "Z-hykwinpx6N",
-        "h_CCil-SKHpo",
-        "cBFFvTBNJzUa",
-        "HvGl1hHyA_VK",
-        "EyNgTHvd2WFk",
-        "KH5McJBi2d8v",
-        "iW_Lq9qf2h6X",
-        "-Kee-DAl2viO",
-        "gCX9965dhzqZ",
         "gIfDvo9L0UH2"
       ],
       "include_colab_link": true
@@ -169,12 +52,7 @@
       "cell_type": "markdown",
       "source": [
         "##### **Project Type**    - Unsupervised\n",
-        "##### **Contribution**    -Team\n",
-        "##### **Team Member 1 -** Kaushal Kumar Jha\n",
-        "##### **Team Member 2 -** Shambhu Nath Jha\n",
-        "##### **Team Member 3 -** Nimesh Thakur\n",
-        "##### **Team Member 4 -** Mihir Gupta\n",
-        "##### **Team Member 5-** Asif PA"
+        "##### **Contribution**    -Individual\n"
       ],
       "metadata": {
         "id": "beRrZCGUAJYm"
@@ -2227,6 +2105,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Multiple bar charts are extremely useful if you want to present a large amount of information in a small amount of space."
+      ],
+      "metadata": {
+        "id": "jp1xpZvCuw_v"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "##### 2. What is/are the insight(s) found from the chart?"
       ],
       "metadata": {
@@ -2250,13 +2137,6 @@
       ],
       "metadata": {
         "id": "qYpmQ266Yuh3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "8aaGBerGnqEL"
       }
     },
     {
@@ -2330,15 +2210,6 @@
       ],
       "metadata": {
         "id": "xKL_Drdhn2kW"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
-      ],
-      "metadata": {
-        "id": "j80asRtnm72C"
       }
     },
     {
@@ -2755,7 +2626,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Bivariate Analysis**"
+        "### **Bivariate Analysis**"
       ],
       "metadata": {
         "id": "vq5byNRZuI7G"
@@ -6376,7 +6247,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Recommendation System**"
+        "## **Recommendation System**"
       ],
       "metadata": {
         "id": "O1nqkXFrKLsS"
